--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,9 @@
   {% if page.image %}
     <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
     <meta property="og:image"  content="{{ site.url }}/{{ page.image }}">
+  {% else %}
+    <meta name="twitter:image" content="{{ site.url }}/files/headshot.jpg">
+    <meta property="og:image"  content="{{ site.url }}/files/headshot.jpg">
   {% endif %}
   <!-- OpenGraph Type -->
   {% if page.id %} <!-- Post -->
