--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,11 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            {% if node.url contains "page" %}
+              {% comment %} Paginated Blog pages should not be included in the sidebar. {% endcomment %}
+            {% else %}
+              <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            {% endif %}
           {% endif %}
         {% endif %}
       {% endfor %}
