Add social sharing buttons to posts
Ridiculously Responsive Social Sharing Buttons are now used to add
buttons to the bottom of each post. So far the following buttons are
included:

- Facebook
- Twitter
- LinkedIn

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: default
   {{ content }}
 </div>
 
+<!-- Related Posts -->
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
@@ -23,3 +24,6 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<!-- Share Buttons -->
+{% include share.html %}
