--- a/_includes/share.html
+++ b/_includes/share.html
@@ -43,6 +43,6 @@
       <script>
         window.jQuery || document.write('<script src="js/vendor/jquery.1.10.2.min.js"><\/script>')
       </script>
-      <script src="{{ site.baseurl }}public/js/rrssb.min.js"></script>
+      <script src="{{ site.baseurl }}/public/js/rrssb.min.js"></script>
 
 </div>
