Fix UTF-8 encoding issues

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 // Import Google Fonts
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700%7CAbril+Fatface);
 
 // Import partials from `site.sass_dir`
 @import "syntax";
