Move share buttons up and push to side

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -2,7 +2,7 @@
 {% assign share-title = page.title | url_encode %}
 {% assign share-excerpt = page.description | url_encode %}
 
-<div class="sharing">
+<aside class="sharing">
   <!-- The Buttons -->
   <ul class="rrssb-buttons clearfix">
     <ul class="rrssb-buttons">
@@ -45,4 +45,4 @@
       </script>
       <script src="{{ site.baseurl }}/public/js/rrssb.min.js"></script>
 
-</div>
+</aside>
