--- a/_sass/_rrssb.scss
+++ b/_sass/_rrssb.scss
@@ -1,6 +1,11 @@
 $black:#202020;
 $black_hover:#878787;
 
+.sharing {
+    width: 50%;
+    float: right;
+}
+
 .rrssb-buttons {
     box-sizing: border-box;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
