--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,59 +4,8 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--Twitter card and OpenGraph-->
-  {% if page.title == "Home" %}
-  <meta name="twitter:card" content="summary">
-  {% elsif page.id %}
-  <meta name="twitter:card" content="summary_large_image">
-  {% endif %}
-  <meta name="twitter:site" content="@alex_gude">
-  <meta name="twitter:creator" content="@alex_gude">
-  <meta name="og:site_name" content="AlexGude.com">
-  <!-- Title -->
-  {% if page.title == "Home" %}
-    <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
-    <meta property="og:title"  content="{{ site.title }} &middot; {{ site.tagline }}">
-  {% elsif page.title %}
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta property="og:title"  content="{{ page.title }}">
-  {% else %}
-    <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
-    <meta property="og:title"  content="{{ site.title }} &middot; {{ site.tagline }}">
-  {% endif %}
-  <!-- url -->
-  {% if page.url %}
-    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-  {% endif %}
-  <!-- Description -->
-  {% if page.description %}
-    <meta name="twitter:description" content="{{ page.description }}">
-    <meta property="og:description"  content="{{ page.description }}">
-  {% else %}
-    <meta name="twitter:description" content="{{ site.description }}">
-    <meta property="og:description"  content="{{ site.description }}">
-  {% endif %}
-  <!-- Image -->
-  {% if page.image %}
-    <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
-    <meta property="og:image"  content="{{ site.url }}/{{ page.image }}">
-  {% else %}
-    <meta name="twitter:image" content="{{ site.url }}/files/headshot.jpg">
-    <meta property="og:image"  content="{{ site.url }}/files/headshot.jpg">
-  {% endif %}
-  <!-- OpenGraph Type -->
-  {% if page.id %} <!-- Post -->
-    <meta property="og:type" content="article">
-    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
-    <meta property="article:author" content="{{ site.url }}">
-  {% elsif page.title == "Home" %} <!-- Home Page -->
-    <meta property="og:type" content="profile">
-    <meta property="profile:first_name" content="Alexander">
-    <meta property="profile:last_name" content="Gude">
-    <meta property="profile:user_name" content="@alex_gude">
-  {% endif %}
-
+  <!-- Twitter Card and OpenGraph Tags -->
+  {% include card.html %}
 
   <title>
     {% if page.title == "Home" %}
