--- a/_sass/poole/_variables.scss
+++ b/_sass/poole/_variables.scss
@@ -27,5 +27,5 @@ $border-color: #e5e5e5;
 $large-breakpoint: 38em;
 $large-font-size: 20px;
 
-$code-font-family: Monaco, Consolas, "Lucida Console", "Courier New", monospace;
+$code-font-family: "Ubuntu Mono", Monaco, Consolas, "Lucida Console", Menlo, "Courier New", monospace;
 $code-color: #bf616a;
