Replace custom RSS and Atom with jekyll-feed
This means that the feed is now at alexgude.com/feed.xml, not at
alexgude.com/atom.xml!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,9 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
+  <!-- RSS (well, actually Atom) -->
+  {% comment %} From jekyll/jekyll-feed {% endcomment %}
+  {% feed_meta %}
 
   <!-- Twitter Card and OpenGraph Tags -->
   {% comment %} From jekyll/jekyll-seo-tag {% endcomment %}
