Add Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,7 @@
   <!-- Twitter Card and OpenGraph Tags -->
   {% comment %} From jekyll/jekyll-seo-tag {% endcomment %}
   {% seo %}
+
+  <!-- Google Analytics -->
+  {% include analytics.html %}
 </head>
