Turn on analytics only on the live site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,8 @@
   {% comment %} From jekyll/jekyll-seo-tag {% endcomment %}
   {% seo %}
 
-  <!-- Google Analytics -->
-  {% include analytics.html %}
+  {% if jekyll.environment == 'production' %}
+    <!-- Google Analytics -->
+    {% include analytics.html %}
+  {% endif %}
 </head>
