--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,10 @@ layout: default
 {% if site.related_posts != empty %}
   <!-- Related Posts -->
   <aside class="related">
-    <h2>Related Posts</h2>
+    <h2>Recent Posts</h2>
+    {% comment %}
+    On Github, related posts simply uses the most recent posts.
+    {% endcomment %}
     <ul class="related-posts">
       {% for post in site.related_posts limit:3 %}
         <li>
