--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
     </nav>
 
     <small>
-      &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
+      &copy; <time datatime="{{ '2016-01-01T00:00:00Z' | date_to_xmlschema }}">2016</time>–<time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
     </small>
   </div>
 </aside>
