Add MathJax, when required

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,9 @@
     <!-- Google Analytics -->
     {% include analytics.html %}
   {% endif %}
+
+  {% if page.use_latex %}
+    <!-- MathJax -->
+    {% include mathjax.html %}
+  {% endif %}
 </head>
