Add in colored sidebar with _config.yaml setting
The current blue is the medium blue from the Tango project palette:
`#3465a4`

Other possible colors considered were:

  - '#6a9fb5' # Hyde blue
  - '#1f77b4' # Seaborn blue
  - '#407496' # A nice blue
  - '#3b7499' # Another nice blue

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+/* Pull in variables from _config.yaml */
+$sidebar_color: {{ site.theme_config.sidebar_color }};
+
 /* Import partials from `site.sass_dir` */
 @import "poole"; /* poole imports multiple subfiles */
 @import "hyde";
