--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@ layout: default
   {{ content }}
 </article>
 
+<!-- Author Blurb -->
+{% include author_card.html %}
+
 <!-- Share Buttons -->
 {% include share.html %}
 
