Clean up article-card and use SASS for styling

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -9,3 +9,4 @@ $sidebar_color: {{ site.theme_config.sidebar_color }};
 @import "custom";
 @import "rrssb";
 @import "font"; /* Google Webfonts */
+@import "article-card";
