Add headshot to the sidebar
I'd like to center it better, but this will do for now.

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -6,5 +6,6 @@ $sidebar_color: {{ site.theme_config.sidebar_color }};
 /* Import partials from `site.sass_dir` */
 @import "poole"; /* poole imports multiple subfiles */
 @import "hyde";
+@import "custom";
 @import "rrssb";
 @import "font"; /* Google Webfonts */
