--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 {% assign homeurl = site.baseurl | append: "/" %}
 
 <aside class="sidebar">
+  <div class="circular-portrait">
+    <img src="{{ site.url }}/files/headshot-small.jpg" alt="Headshot of Alexander Gude"/>
+  </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
