--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,16 +18,14 @@ layout: default
     {% comment %}
     On Github, related posts simply uses the most recent posts.
     {% endcomment %}
-    <ul class="related-posts">
+    <div class="related-posts">
       {% for post in site.related_posts limit:3 %}
-        <li>
-          <h3>
-            <a href="{{ site.baseurl }}{{ post.url }}">
-              {{ post.title }}
-              <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%B %d, %Y' }}</time></small>
-            </a>
-          </h3>
-        </li>
+        {% include article_card.html
+          url=post.url
+          image=post.image
+          title=post.title
+          description=post.description
+        %}
       {% endfor %}
     </ul>
   </aside>
