Add ability to add videos to pages

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -49,3 +49,13 @@
   font-size: 75%;
   color: #999;
 }
+
+// Video
+.video-gif {
+  position : relative;
+  display : block;
+  width : 100%;
+  min-width : 200px;
+  margin : auto;
+  height : auto;
+}
