--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,5 +1,5 @@
 <div class="video-gif">
-  <video style="display:block; width:100%; height:auto;" autoplay loop="loop">
+  <video style="display:block; width:100%; height:auto;" autoplay muted loop="loop">
     <source src="{{ include.file }}" type="video/mp4" />
   </video>
 </div>
