Fix unclosed `<div>`

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,6 @@ layout: default
           description=post.description
         %}
       {% endfor %}
-    </ul>
+    </div>
   </aside>
 {% endif %}
