--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <style type="text/css">
+  <style>
   {% capture include_to_scssify %} {% include main.scss %} {% endcapture %}
   {{ include_to_scssify | scssify }}
   </style>
