Wrap site title in <div> to avoid two <h1> tags
Each page should define exactly one <h1> tag. This replaces the <h1> tag
used for the site title with a <div>.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,9 @@
   </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
+      <div class="site-title">
         <a href="{{ homeurl }}" title="Home">{{ site.title }}</a>
-      </h1>
+      </div>
       <p class="lead">{{ site.description }}</p>
     </div>
 
