Add `alt` to article card images
This is a temporary work-around, I need to come up with something more
meaningful.

--- a/_includes/article_card.html
+++ b/_includes/article_card.html
@@ -4,7 +4,7 @@
       <td>
         {% comment %} The image. {% endcomment %}
         <a href="{{ include.url }}">
-          <img src="{{ site.url }}{{ include.image }}">
+          <img src="{{ site.url }}{{ include.image }}" alt="Article header image, used for decoration.">
         </a>
       </td>
       <td>
