Add `image_alt` to `article_card.html`

--- a/_includes/article_card.html
+++ b/_includes/article_card.html
@@ -1,10 +1,16 @@
+{% comment %} Get the alt text. {% endcomment %}
+{% if include.image_alt == nil or include.image_alt == "" %}
+  {% capture alt_text %}Article header image, used for decoration.{% endcapture %}
+{% else %}
+  {% capture alt_text %}{{ include.image_alt }}{% endcapture %}
+{% endif %}
 <div class="article-card">
   <table>
     <tr>
       <td>
         {% comment %} The image. {% endcomment %}
         <a href="{{ include.url }}">
-          <img src="{{ site.url }}{{ include.image }}" alt="Article header image, used for decoration.">
+          <img src="{{ site.url }}{{ include.image }}" alt="{{ alt_text }}">
         </a>
       </td>
       <td>
