--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,7 @@ layout: default
         {% include article_card.html
           url=post.url
           image=post.image
+          image_alt=post.image_alt
           title=post.title
           description=post.description
         %}
