Remove `site.url` from templates
It is required in the template `share.html` because those make calls to
external APIs.

--- a/_includes/article_card.html
+++ b/_includes/article_card.html
@@ -10,7 +10,7 @@
       <td>
         {% comment %} The image. {% endcomment %}
         <a href="{{ include.url }}">
-          <img src="{{ site.url }}{{ include.image }}" alt="{{ alt_text }}">
+          <img src="{{ include.image }}" alt="{{ alt_text }}">
         </a>
       </td>
       <td>
