--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
 <aside class="sidebar">
   <div class="sidebar-portrait">
-    <img src="{{ site.url }}/files/headshot-small.jpg" alt="Headshot of Alexander Gude"/>
+    <img src="/files/headshot-small.jpg" alt="Headshot of Alexander Gude"/>
   </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
