--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,3 +1,7 @@
+{% comment %}
+{{ site.url }} is required for the share-url because it is passed to an
+external site which cannot use a relative URL.
+{% endcomment %}
 {% assign share-url = page.url | prepend: site.baseurl | prepend: site.url %}
 {% assign share-title = page.title | url_encode %}
 {% assign share-excerpt = page.description | url_encode %}
