Add ARIA role tags and remove unused includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: compress
 
     {% include sidebar.html %}
 
-    <main class="content container">
+    <main role="main" class="content container">
       {{ content }}
     </main>
 
