--- a/_includes/share.html
+++ b/_includes/share.html
@@ -6,7 +6,7 @@ external site which cannot use a relative URL.
 {% assign share-title = page.title | url_encode %}
 {% assign share-excerpt = page.description | url_encode %}
 
-<aside class="sharing">
+<aside role="complementary" class="sharing">
   <!-- The Buttons -->
   <ul class="rrssb-buttons clearfix">
 
