--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 {% assign homeurl = site.baseurl | append: "/" %}
 
-<aside class="sidebar">
+<aside role="complementary" class="sidebar">
   <div class="sidebar-portrait">
     <img src="/files/headshot-small.jpg" alt="Headshot of Alexander Gude"/>
   </div>
@@ -12,7 +12,7 @@
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <nav class="sidebar-nav">
+    <nav role="navigation" class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == homeurl %} active{% endif %}" href="{{ homeurl }}">Home</a>
 
       {% comment %}
