--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,23 +11,5 @@ layout: default
 <!-- Share Buttons -->
 {% include share.html %}
 
-{% if site.related_posts != empty %}
-  <!-- Related Posts -->
-  <aside role="complementary" class="related">
-    <h2>Recent Posts</h2>
-    {% comment %}
-    On Github, related posts simply uses the most recent posts.
-    {% endcomment %}
-    <div class="related-posts">
-      {% for post in site.related_posts limit:3 %}
-        {% include article_card.html
-          url=post.url
-          image=post.image
-          image_alt=post.image_alt
-          title=post.title
-          description=post.description
-        %}
-      {% endfor %}
-    </div>
-  </aside>
-{% endif %}
+<!-- Related and Recent Posts -->
+{% include related_posts.html %}
