Remove chronological sort on related posts
The newest related posts will now appear first.

--- a/_includes/related_posts.html
+++ b/_includes/related_posts.html
@@ -32,8 +32,7 @@ category or not.
 
 {% assign placed_articles = 0 %}
 {% if page.categories != empty %}
-  {% assign sorted = site.posts | sort: 'date' %}
-  {% for post in sorted %}
+  {% for post in site.posts %}
     {% if placed_articles < 3 and post.url != page.url %}
       {% for category in page.categories %}
         {% if post.categories contains category %}
