Start changing the Pygment CSS to Eldar.vim

--- a/_sass/poole/_code.scss
+++ b/_sass/poole/_code.scss
@@ -35,7 +35,7 @@ pre code {
   margin-bottom: 1rem;
   font-size: 0.8rem;
   line-height: 1.4;
-  background-color: #f9f9f9;
+  background-color: #2e3436;
   border-radius: 0.25rem;
 
   pre {
