--- a/_sass/poole/_code.scss
+++ b/_sass/poole/_code.scss
@@ -31,12 +31,12 @@ pre code {
 
 /* Pygments via Jekyll */
 .highlight {
-  padding: 1rem;
+  padding: 0.2rem;
   margin-bottom: 1rem;
-  font-size: .8rem;
+  font-size: 0.8rem;
   line-height: 1.4;
   background-color: #f9f9f9;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 
   pre {
     margin-bottom: 0;
