Change tables so the first non-header row is white

--- a/_sass/poole/_base.scss
+++ b/_sass/poole/_base.scss
@@ -83,7 +83,7 @@ th {
   text-align: left;
 }
 
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
+tbody tr:nth-child(even) td,
+tbody tr:nth-child(even) th {
   background-color: #f9f9f9;
 }
