--- a/_includes/article_card.html
+++ b/_includes/article_card.html
@@ -1,5 +1,5 @@
 <div class="article-card">
-  <table>
+  <table role="presentation">
     <tr>
       <td>
         {% comment %} The image. {% endcomment %}
