--- a/_includes/related_posts.html
+++ b/_includes/related_posts.html
@@ -14,14 +14,14 @@ category or not.
 <!-- Related Posts -->
 <aside role="complementary" class="related">
   <h2>Related Posts</h2>
-  <div class="related-posts">
+  <div class="card-grid">
 {% endcapture %}
 
 {% capture recent_snippet %}
 <!-- Recent Posts -->
 <aside role="complementary" class="related">
   <h2>Recent Posts</h2>
-  <div class="related-posts">
+  <div class="card-grid">
 {% endcapture %}
 
 {% capture close_h2 %}
