--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -24,23 +24,29 @@
 // Card Grid
 .card-grid {
   display: grid;
-  grid-template-columns: 25% 75%;
-  grid-gap: 10px;
+  grid-template-columns: 10em auto;
+  grid-gap: 0.5em;
   background-color: #f9f9f9;
   align-items: center;
+  border: 0.25em solid #e5e5e5;
   border-radius: 5px;
+  padding: 0.25em;
 }
 
 .card-element {
-  padding: 0px;
+  padding: 0.2em;
 }
 
 .card-image {
   @extend .card-element;
+  img {
+    margin: 0;
+  }
 }
 
 .card-text {
   @extend .card-element;
+  font-size: 85%;
 }
 
 // Legal links
