--- a/_sass/poole/_posts.scss
+++ b/_sass/poole/_posts.scss
@@ -6,7 +6,7 @@
 
 .page,
 .post {
-  margin-bottom: 4em;
+  margin-bottom: 1em;
 
   li + li {
     margin-top: .25rem;
@@ -35,34 +35,8 @@
 
 /* Related posts */
 .related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 2em;
+  padding-bottom: 2em;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-}
-
-.related-posts {
-  padding-left: 0;
-  list-style: none;
-
-  h3 {
-    margin-top: 0;
-  }
-
-  li {
-    small {
-      font-size: 75%;
-      color: #999;
-    }
-
-    a:hover {
-      color: #268bd2;
-      text-decoration: none;
-
-      small {
-        color: inherit;
-      }
-    }
-  }
 }
