Reduce space around pagination buttons

--- a/_sass/poole/_pagination.scss
+++ b/_sass/poole/_pagination.scss
@@ -30,7 +30,7 @@ a.pagination-item:hover {
 
 @media (min-width: 30em) {
   .pagination {
-    margin: 3rem 0;
+    margin: 1em 0;
   }
 
   .pagination-item {
