--- a/_sass/poole/_pagination.scss
+++ b/_sass/poole/_pagination.scss
@@ -14,7 +14,7 @@
 /* Pagination items can be `span`s or `a`s */
 .pagination-item {
   display: block;
-  padding: 1rem;
+  padding: 1em;
   border: solid #eee;
   border-width: 1px 0;
 
@@ -36,17 +36,17 @@ a.pagination-item:hover {
   .pagination-item {
     float: left;
     width: 50%;
-    border-width: 1px;
+    border-width: 3px;
 
     &:first-child {
       margin-bottom: 0;
-      border-top-left-radius:    4px;
-      border-bottom-left-radius: 4px;
+      border-top-left-radius:    5px;
+      border-bottom-left-radius: 5px;
     }
     &:last-child {
-      margin-left: -1px;
-      border-top-right-radius:    4px;
-      border-bottom-right-radius: 4px;
+      margin-left: -3px;
+      border-top-right-radius:    5px;
+      border-bottom-right-radius: 5px;
     }
   }
 }
