--- a/_sass/poole/_posts.scss
+++ b/_sass/poole/_posts.scss
@@ -26,7 +26,7 @@
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  display: none;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
