Add a little margin to the post grid

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -31,6 +31,8 @@
   border: 0.15em solid #e5e5e5;
   border-radius: 5px;
   padding: 0.25em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 .card-element {
