--- a/_sass/poole/_type.scss
+++ b/_sass/poole/_type.scss
@@ -118,3 +118,15 @@ a[href^="#fnref:"] {
   font-size: 1.25rem;
   font-weight: 300;
 }
+
+/* Dashed un-ordered lists */
+ul {
+  list-style-type: none;
+  padding-left: 1em;
+}
+
+ul > li:before {
+  content: "—"; /* em dash */
+  position: absolute;
+  margin-left: -1.1em; 
+}
