--- a/_sass/poole/_type.scss
+++ b/_sass/poole/_type.scss
@@ -99,7 +99,7 @@ a[href^="#fn:"],
 /* Back to footnote link */
 a[href^="#fnref:"] {
   display: inline-block;
-  margin-left: .1rem;
+  margin-left: 0.1em;
   font-weight: bold;
 }
 
@@ -107,6 +107,10 @@ a[href^="#fnref:"] {
 .footnotes {
   margin-top: 1em;
   font-size: 85%;
+}
+
+.footnotes p {
+  margin-block-end: 0.5em;
 }
 
 /* Custom type
@@ -119,7 +123,7 @@ a[href^="#fnref:"] {
   font-weight: 300;
 }
 
-/* Dashed un-ordered lists */
+/* Dashed un-ordered lists, but not the social buttons */
 ul {
   list-style-type: none;
   padding-left: 2em;
@@ -128,15 +132,17 @@ ul {
 ul > li:before {
   content: "—"; /* em dash */
   position: absolute;
-  margin-left: -1.1em; 
+  margin-left: -1.1em;
   font-weight: bold;
+}
+
+ul.rrssb-buttons > li:before {
+  display: none;
 }
 
 /* Bold numbers for numbered lists */
 ol > li {
   margin: 0;
-  padding-left: 2em;
-  text-indent: -2em;
   list-style-type: none;
   counter-increment: item;
 }
@@ -144,6 +150,6 @@ ol > li {
 ol > li:before {
   content: counter(item) ".";
   font-weight: bold;
-  margin-left: -1.1em; 
-  padding-right: 0.5em;
+  margin-left: -1.1em;
+  float: left;
 }
