--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Ubuntu+Mono&display=swap"
+        type="text/css" />
+  <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png">
