--- a/_sass/poole/_code.scss
+++ b/_sass/poole/_code.scss
@@ -10,8 +10,8 @@ pre {
 }
 
 code {
-  padding: .25em .5em;
-  font-size: 85%;
+  padding: 0.25em 0.5em;
+  font-size: $code-inline-font-size;
   color: $code-color;
   background-color: #f9f9f9;
   border-radius: 3px;
@@ -22,9 +22,10 @@ pre {
   margin-bottom: 1rem;
 }
 
+// Fenced Code Blocks like ```python ...```
 pre code {
   padding: 0;
-  font-size: 100%;
+  font-size: $code-block-font-size;
   color: inherit;
   background-color: transparent;
 }
@@ -33,8 +34,7 @@ pre code {
 .highlight {
   padding: 0.2rem;
   margin-bottom: 1rem;
-  font-size: 0.8rem;
-  line-height: 1.4;
+  line-height: 1.12;
   background-color: #f9f9f9;
   border-radius: 0.25rem;
 
@@ -45,9 +45,9 @@ pre code {
 
   .lineno {
     display: inline-block; /* Ensures the null space also isn't selectable */
-    padding-right: .75rem;
-    padding-left: .25rem;
-    color: #999;
+    padding-right: 0.75rem;
+    padding-left: 0.25rem;
+    color: #999999;
     /* Make sure numbers aren't selectable */
     -webkit-user-select: none;
        -moz-user-select: none;
