Move sidebar color to SASS from YAML

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,12 +1,11 @@
-$blue: #268bd2;
-
 $root-font-family: "PT Sans", "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
 $body-bg: #fff;
-$link-color: $blue;
+$link-color: #268bd2;
+$sidebar-color: #3465a4;
 
 $border-color: #e5e5e5;
 
