--- a/_sass/poole/_last.scss
+++ b/_sass/poole/_last.scss
@@ -110,7 +110,7 @@ a.sidebar-nav-item:focus {
  */
 
 .themed .sidebar {
-  background-color: $sidebar_color;
+  background-color: $sidebar-color;
 }
 .themed .content a,
 .themed .related-posts li a:hover {
