--- a/_sass/poole/_type.scss
+++ b/_sass/poole/_type.scss
@@ -89,10 +89,7 @@ blockquote {
 }
 
 
-/* Markdown footnotes
- *
- * See the example content post for an example.
- */
+// Markdown footnotes
 
 /* Footnote number within body text */
 a[href^="#fn:"],
