Add '-ms-user-select: none;' to linenums as well

--- a/_sass/poole/_code.scss
+++ b/_sass/poole/_code.scss
@@ -51,6 +51,7 @@ pre code {
     /* Make sure numbers aren't selectable */
     -webkit-user-select: none;
        -moz-user-select: none;
+        -ms-user-select: none;
             user-select: none;
   }
 }
