--- a/_sass/poole/_base.scss
+++ b/_sass/poole/_base.scss
@@ -3,10 +3,15 @@
  * Update the foundational and global aspects of the page.
  */
 
-* {
+html {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+       -moz-box-sizing: inherit;
+            box-sizing: inherit;
 }
 
 html {
