Consolidate Poole CSS

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,6 @@
 @import "variables";
 
 /* Import partials from `site.sass_dir` */
-@import "poole"; /* poole imports multiple subfiles */
+@import "poole";
 @import "rrssb";
 @import "custom";
