Convert 3 character hex to 6.

--- a/_sass/_rrssb.scss
+++ b/_sass/_rrssb.scss
@@ -182,7 +182,7 @@ $black_hover:#878787;
 }
 
 .rrssb-buttons li a {
-  background-color: #ccc;
+  background-color: #cccccc;
   border-radius: 2px;
   box-sizing: border-box;
   display: block;
