--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@ $site-title-font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 
 $root-line-height: 1.5;
 
-$body-bg: #fff;
+$body-bg: #ffffff;
 $body-color: #515151;
 $border-color: #e5e5e5;
 $code-color: #bf616a;
