--- a/_sass/_poole.scss
+++ b/_sass/_poole.scss
@@ -146,14 +146,14 @@ hr {
   position: relative;
   margin: 1.5rem 0;
   border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #ffffff;
 }
 
 abbr {
   font-size: $abbr-font-size;
   font-weight: bold;
-  color: #555;
+  color: #555555;
   text-transform: uppercase;
 
   &[title] {
@@ -240,71 +240,71 @@ ol > li:before {
   margin-left: -1.1em;
   float: left;
 }
-.highlight .hll { background-color: #ffc; }
-.highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
+.highlight .hll { background-color: #ffffcc; }
+.highlight .c { color: #999999; } /* Comment */
+.highlight .err { color: #aa0000; background-color: #ffaaaa; } /* Error */
+.highlight .k { color: #006699; } /* Keyword */
+.highlight .o { color: #555555; } /* Operator */
+.highlight .cm { color: #0099ff; font-style: italic; } /* Comment.Multiline */
+.highlight .cp { color: #009999; } /* Comment.Preproc */
+.highlight .c1 { color: #999999; } /* Comment.Single */
+.highlight .cs { color: #999999; } /* Comment.Special */
+.highlight .gd { background-color: #ffcccc; border: 1px solid #cc0000; } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
-.highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
-.highlight .go { color: #aaa } /* Generic.Output */
-.highlight .gp { color: #009; } /* Generic.Prompt */
+.highlight .gr { color: #ff0000; } /* Generic.Error */
+.highlight .gh { color: #003300; } /* Generic.Heading */
+.highlight .gi { background-color: #ccffcc; border: 1px solid #00cc00; } /* Generic.Inserted */
+.highlight .go { color: #aaaaaa; } /* Generic.Output */
+.highlight .gp { color: #000099; } /* Generic.Prompt */
 .highlight .gs { } /* Generic.Strong */
-.highlight .gu { color: #030; } /* Generic.Subheading */
-.highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #0a8; } /* Name.Class */
-.highlight .no { color: #360 } /* Name.Constant */
-.highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
-.highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
-.highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #0cf; } /* Name.Namespace */
+.highlight .gu { color: #003300; } /* Generic.Subheading */
+.highlight .gt { color: #99cc66; } /* Generic.Traceback */
+.highlight .kc { color: #006699; } /* Keyword.Constant */
+.highlight .kd { color: #006699; } /* Keyword.Declaration */
+.highlight .kn { color: #006699; } /* Keyword.Namespace */
+.highlight .kp { color: #006699; } /* Keyword.Pseudo */
+.highlight .kr { color: #006699; } /* Keyword.Reserved */
+.highlight .kt { color: #007788; } /* Keyword.Type */
+.highlight .m { color: #ff6600; } /* Literal.Number */
+.highlight .s { color: #d44950; } /* Literal.String */
+.highlight .na { color: #4f9fcf; } /* Name.Attribute */
+.highlight .nb { color: #336666; } /* Name.Builtin */
+.highlight .nc { color: #00aa88; } /* Name.Class */
+.highlight .no { color: #336600; } /* Name.Constant */
+.highlight .nd { color: #9999ff; } /* Name.Decorator */
+.highlight .ni { color: #999999; } /* Name.Entity */
+.highlight .ne { color: #cc0000; } /* Name.Exception */
+.highlight .nf { color: #cc00ff; } /* Name.Function */
+.highlight .nl { color: #9999ff; } /* Name.Label */
+.highlight .nn { color: #00ccff; } /* Name.Namespace */
 .highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
-.highlight .ow { color: #000; } /* Operator.Word */
-.highlight .w { color: #bbb } /* Text.Whitespace */
-.highlight .mf { color: #f60 } /* Literal.Number.Float */
-.highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #f60 } /* Literal.Number.Integer */
-.highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
-.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
-.highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
-.highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
-.highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
-.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
-.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+.highlight .nv { color: #003333; } /* Name.Variable */
+.highlight .ow { color: #000000; } /* Operator.Word */
+.highlight .w { color: #bbbbbb; } /* Text.Whitespace */
+.highlight .mf { color: #ff6600; } /* Literal.Number.Float */
+.highlight .mh { color: #ff6600; } /* Literal.Number.Hex */
+.highlight .mi { color: #ff6600; } /* Literal.Number.Integer */
+.highlight .mo { color: #ff6600; } /* Literal.Number.Oct */
+.highlight .sb { color: #cc3300; } /* Literal.String.Backtick */
+.highlight .sc { color: #cc3300; } /* Literal.String.Char */
+.highlight .sd { color: #cc3300; font-style: italic; } /* Literal.String.Doc */
+.highlight .s2 { color: #cc3300; } /* Literal.String.Double */
+.highlight .se { color: #cc3300; } /* Literal.String.Escape */
+.highlight .sh { color: #cc3300; } /* Literal.String.Heredoc */
+.highlight .si { color: #aa0000; } /* Literal.String.Interpol */
+.highlight .sx { color: #cc3300; } /* Literal.String.Other */
+.highlight .sr { color: #33aaaa; } /* Literal.String.Regex */
+.highlight .s1 { color: #cc3300; } /* Literal.String.Single */
+.highlight .ss { color: #ffcc33; } /* Literal.String.Symbol */
+.highlight .bp { color: #336666; } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #003333; } /* Name.Variable.Class */
+.highlight .vg { color: #003333; } /* Name.Variable.Global */
+.highlight .vi { color: #003333; } /* Name.Variable.Instance */
+.highlight .il { color: #ff6600; } /* Literal.Number.Integer.Long */
 
 .css .o,
 .css .o + .nt,
-.css .nt + .nt { color: #999; }
+.css .nt + .nt { color: #999999; }
 /* Code
  *
  * Inline and block-level code snippets. Includes tweaks to syntax highlighted
@@ -417,8 +417,8 @@ footer {
 .related {
   padding-top: 2em;
   padding-bottom: 2em;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 /* Pagination
  *
@@ -429,7 +429,7 @@ footer {
 .pagination {
   overflow: hidden; /* clearfix */
   margin: 0 -1.5rem 1rem;
-  color: #ccc;
+  color: #cccccc;
   text-align: center;
 }
 
@@ -437,7 +437,7 @@ footer {
 .pagination-item {
   display: block;
   padding: 1em;
-  border: solid #eee;
+  border: solid #eeeeee;
   border-width: 1px 0;
 
   &:first-child {
@@ -498,7 +498,7 @@ a.pagination-item:hover {
 
 /* Sidebar links */
 .sidebar a {
-  color: #fff;
+  color: #ffffff;
 }
 
 /* Sidebar nav */
