Add ability to link back to canonical post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,9 @@
     <!-- MathJax -->
     {% include mathjax.html %}
   {% endif %}
+
+  {% if page.canonical %}
+    <!-- Canonical Link -->
+    <link rel="canonical" href="{{ page.canonical }}" />
+  {% endif %}
 </head>
