Add Gab41 key to posts.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
     {% include mathjax.html %}
   {% endif %}
 
-  {% if page.canonical %}
+  {% if page.gab41 %}
     <!-- Canonical Link -->
-    <link rel="canonical" href="{{ page.canonical }}" />
+    <link rel="canonical" href="{{ page.gab41 }}" />
   {% endif %}
 </head>
