--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,16 @@ layout: default
 <article role="article" class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: '%B %d, %Y' }}</time>
+
+  {% if page.gab41 %}
+    <!-- Top note with link back to Gab41 -->
+    <p>
+    <em>This article originally appeared on
+      <a href="{{ page.gab41 }}"><strong>Lab41's blog: Gab41</strong></a>. It
+      is reposted here with permission.</em>
+    </p>
+  {% endif %}
+
   {{ content }}
 </article>
 
