--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     <!-- Categories -->
     {% assign sorted = page.categories | sort %}
     {% for category in sorted %}
-    <a class="post-tag" href="/category/{{ category }}/">
+    <a class="post-tag" href="/topics/{{ category }}/">
       #{{ category }}
     </a>
     {% endfor %}
